--- a/components/navigation.html
+++ b/components/navigation.html
@@ -11,9 +11,9 @@
 -->
 
 <div id="navWeek">
-  <div><a id="prevBtn" href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
+  <div><a id="prevWeekBtn" href="#"><i class="fa fa-angle-left" aria-hidden="true"></i> Previous</a></div>
   <div><a id="thisWeekBtn" href="#">This week</a></div>
-  <div><a id="nextBtn" href="#">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
+  <div><a id="nextWeekBtn" href="#">Next  <i class="fa fa-angle-right" aria-hidden="true"></i></a></div>
 </div>
 
 <section id="infoTest"></section>
